[package]
name = "briefly"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.0"
actix-cors = "0.7.1"
env_logger = "0.11.8"
toml = "0.9.8"
dotenv = "0.14.1"
log = { version = "0.4", features = ["std"] }
serde = { version = "1.0.224", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
regex = "1"
reqwest = { version = "0.12.24", features = ["json"] }
anyhow = "1.0"
thiserror = "2.0.17"
uuid = { version = "1", features = ["v4"] }